--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
         <link href="fontawesome-free-5.8.1-web/css/all.css" rel="stylesheet">
 
-        <title>Hello, git!</title>
+        <title>Комп'ютерний практикум №3. Git і GitHub</title>
     </head>
     <body>
         <header>
